# osswitcher-rust

./: Cargo.toml  README.md  build.rs
src/: main.rs
src/os_switcher/: mod.rs
